--- a/codehelp-babbar/rtk/package.json
+++ b/codehelp-babbar/rtk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project-2",
+  "name": "rtk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
-    "react-router-dom": "^6.28.0"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -27,7 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
 }
